--- a/jsfcrud/resources/application.properties
+++ b/jsfcrud/resources/application.properties
@@ -14,8 +14,8 @@ hibernate.hbm2ddl.auto=update
 # Database
 postgresql.jdbc.driverClassName:org.postgresql.Driver
 postgresql.jdbc.url:jdbc:postgresql://localhost:5432/jsfcrudexample
-postgresql.jdbc.username:postgres
-postgresql.jdbc.password:root
+postgresql.jdbc.username:username
+postgresql.jdbc.password:password
 
 
 postgresql.jdbc.init-db=true1
